Bug 371135 - Active Local Selection doesn't actually limit drawing.
Summary: Active Local Selection doesn't actually limit drawing.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-18 16:33 UTC by wolthera
Modified: 2016-10-19 10:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2016-10-18 16:33:17 UTC
Warning, this mean there's no global selection, only the local selection is active. So painting with a local selection active should mean the freehand brush would get limited by it. It doesn't.

But it does limit the shift+backspace and backspace...

Reproducible: Always
Comment 1 Dmitry Kazakov 2016-10-19 10:27:05 UTC
Git commit 773b8bf82f4a011da95b0e64f8929005b65dd1e6 by Dmitry Kazakov.
Committed on 19/10/2016 at 10:27.
Pushed by dkazakov into branch 'master'.

Fix local selections to work again

This patch just correctly implements the overriding of a selection
in the resources snapshot

Fixes T4089
CC:djkah11@yandex.ru

M  +10   -14   libs/ui/tool/kis_resources_snapshot.cpp

http://commits.kde.org/krita/773b8bf82f4a011da95b0e64f8929005b65dd1e6