Fix local selections to work again

This patch just correctly implements the overriding of a selection
in the resources snapshot

Fixes T4089
BUG:371135
CC:djkah11@yandex.ru