libs/ui/tool/kis_resources_snapshot.cpp
@@ -71,7 +71,7 @@ struct KisResourcesSnapshot::Private {
     bool globalAlphaLock;
     qreal effectiveZoom;
     bool presetAllowsLod;
-    KisSelectionSP selection;
+    KisSelectionSP selectionOverride;
 };
 
 KisResourcesSnapshot::KisResourcesSnapshot(KisImageSP image, KisNodeSP currentNode, KisPostExecutionUndoAdapter *undoAdapter, KoCanvasResourceManager *resourceManager, KisDefaultBoundsBaseSP bounds)
@@ -131,9 +131,6 @@ KisResourcesSnapshot::KisResourcesSnapshot(KisImageSP image, KisNodeSP currentNo
     m_d->globalAlphaLock = resourceManager->resource(KisCanvasResourceProvider::GlobalAlphaLock).toBool();
     m_d->effectiveZoom = resourceManager->resource(KisCanvasResourceProvider::EffectiveZoom).toDouble();
     m_d->presetAllowsLod = resourceManager->resource(KisCanvasResourceProvider::PresetAllowsLod).toBool();
-    if (m_d->image) {
-        m_d->selection = m_d->image->globalSelection();
-    }
 }
 
 KisResourcesSnapshot::~KisResourcesSnapshot()
@@ -240,24 +237,23 @@ KisSelectionSP KisResourcesSnapshot::activeSelection() const
      * It is possible to have/use the snapshot without the image. Such
      * usecase is present for example in the scratchpad.
      */
-    if (!m_d->selection) {
-
-        return 0;
+    if (m_d->selectionOverride) {
+        return m_d->selectionOverride;
     }
 
-    m_d->selection = m_d->image ? m_d->image->globalSelection() : 0;
+    KisSelectionSP selection = m_d->image ? m_d->image->globalSelection() : 0;
 
     KisLayerSP layer = dynamic_cast<KisLayer*>(m_d->currentNode.data());
     KisSelectionMaskSP mask;
     if((layer = dynamic_cast<KisLayer*>(m_d->currentNode.data()))) {
-         m_d->selection = layer->selection();
+         selection = layer->selection();
     } else if ((mask = dynamic_cast<KisSelectionMask*>(m_d->currentNode.data())) &&
-               mask->selection() == m_d->selection) {
+               mask->selection() == selection) {
 
-         m_d->selection = 0;
+         selection = 0;
     }
 
-    return m_d->selection;
+    return selection;
 }
 
 bool KisResourcesSnapshot::needsAirbrushing() const
@@ -349,9 +345,9 @@ void KisResourcesSnapshot::setBGColorOverride(const KoColor &color)
     m_d->currentBgColor = color;
 }
 
-void KisResourcesSnapshot::setSelectionOverride(KisSelectionSP m_selection)
+void KisResourcesSnapshot::setSelectionOverride(KisSelectionSP selection)
 {
-    m_d->selection = m_selection;
+    m_d->selectionOverride = selection;
 }
 
 void KisResourcesSnapshot::setBrush(const KisPaintOpPresetSP &brush)
